# travis

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  index.html  search-index.js
examples/: demo.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/error_chain/: trait.ChainedError.js
implementors/std/error/: trait.Error.js
implementors/travis/error/: trait.ResultExt.js
src/: error.rs  lib.rs
src/builds/: mod.rs
src/commits/: mod.rs
src/env/: mod.rs
src/jobs/: mod.rs
src/repos/: mod.rs
src/travis/: error.rs.html  lib.rs.html
src/travis/builds/: mod.rs.html
src/travis/env/: mod.rs.html
src/travis/jobs/: mod.rs.html
src/travis/repos/: mod.rs.html
travis/: Credential.t.html  enum.Credential.html  enum.State.html  index.html  sidebar-items.js  struct.Branch.html  struct.Client.html  struct.Owner.html  type.Future.html  type.Stream.html
travis/builds/: Builds.t.html  ListOptionsBuilder.t.html  index.html  sidebar-items.js  struct.Build.html  struct.Builds.html  struct.ListOptions.html  struct.ListOptionsBuilder.html
travis/env/: EnvVar.t.html  EnvVarCreate.t.html  EnvVarPatch.t.html  EnvVarPermissions.t.html  index.html  sidebar-items.js  struct.Env.html  struct.EnvVar.html  struct.EnvVarCreate.html  struct.EnvVarPatch.html  struct.EnvVarPermissions.html
travis/error/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
travis/jobs/: Jobs.t.html  index.html  sidebar-items.js  struct.Job.html  struct.Jobs.html
travis/repos/: ListOptions.t.html  RepoPermissions.t.html  index.html  sidebar-items.js  struct.ListOptions.html  struct.ListOptionsBuilder.html  struct.RepoPermissions.html  struct.Repos.html  struct.Repository.html
(+1 files in other folders)
