[package]
name = "travis"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Travis v3 API interfaces"
documentation = "https://softprops.github.io/travis"
homepage = "https://github.com/softprops/travis"
repository = "https://github.com/softprops/travis"
keywords = ["travis", "api"]
license = "MIT"
readme = "README.md"

[dependencies]
futures = "0.1"
hyper = "0.11"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"
tokio-core = "0.1.8"
tokio-timer = "0.1.2"
url = "1.5.1"
error-chain = "0.10"
derive_builder = "0.5"

[dependencies.hyper-tls]
optional = true
version = "0.1.2"

[features]
default = ["tls"]
tls = ["hyper-tls"]